--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,36 @@
-
-/* Your CSS Code here. */
-.row{
-    height:150px;
-    margin-bottom: 12px;
-    background-color: rgb(118, 36, 36);
-
-}
-.container{
-    border: 8px solid rgb(55, 177, 55);
-    padding: 10px 20px;
-    background-color: darksalmon;
-}
-.row >div{
-    border: 1.5px dotted black;
-}
+body{
+    margin: 30px;
+    color:rgb(0, 0, 0);
+    }
+    .container{
+    width: 600px;
+    border: 5px solid rgb(4, 255, 4);
+    background-color: rgb(41, 0, 0);
+    }
+    
+    .row{
+    border: 5px solid rgb(255, 188, 188);
+    height: 200px;
+    }
+    .row>div{
+    border: 1.5px dotted rgb(38, 38, 43);
+    }
+    .r1c1{
+    background-color: teal;
+    }
+    .r1c2{
+    background-color: thistle;
+    }
+    .r2c1{
+    background-color:tomato;
+    }
+    .r2c2{
+    background-color:turquoise
+    }
+    .r3c1{
+    background-color:violet
+    }
+    .r3c2{
+    background-color: yellowgreen;
+    }
+  
